# playground-django-api-test

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  .tool-versions  Dockerfile  LICENSE  README.md  example.env  manage.py  mkdocs.yml  pyproject.toml  sombra.yaml
.gitlab/: build.yml  legal.yml  qa.yml  security.yml  setup.yml  test.yml
api/: api.hurl
django_api_example/: asgi.py  settings.py  urls.py  wsgi.py
django_api_example/app_api/: apps.py  routing.py  urls.py
django_api_example/app_api/resources/: emails.py
django_api_example/app_core/: apps.py  internal.py  models.py
django_api_example/app_core/management/commands/: process_emails.py
django_api_example/app_core/migrations/: 0001_initial.py
docs/: index.md
mk/: django.mk  local.mk  podman.mk  qa.mk  test.mk
qa/: .bandit.ini  .coveragerc  .docstr.yaml  .flake8.cfg  .import-rules.ini  .mypy.ini  .skjold.toml
